[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/scaler.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/parallax_space.tscn" type="PackedScene" id=3]
[ext_resource path="res://Textures/UI.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Textures/UIPanel.tres" type="StyleBox" id=5]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 0.366667 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="DynamicFont" id=2]

size = 600
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 120
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 367.978, 128.17 )

[node name="main_menu" type="Container"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="highlight" type="Panel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1825.0
margin_top = 2000.0
margin_right = 3616.0
margin_bottom = 2450.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = SubResource( 1 )

[node name="scaler" parent="." index="1" instance=ExtResource( 2 )]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -652.0
margin_top = -785.0
margin_right = 2218.0
margin_bottom = 1804.0
mouse_filter = 2

[node name="bg_parallax" parent="." index="2" instance=ExtResource( 3 )]

[node name="TITLE" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -875.0
margin_top = -159.0
margin_right = 2994.0
margin_bottom = 621.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "AI: WILD & FREE"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="hover" type="Area2D" parent="TITLE" index="0"]

position = Vector2( 8.35822, 1050.34 )
scale = Vector2( 2.625, 2.625 )
input_pickable = true
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
priority = 30.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="play_but" type="Panel" parent="TITLE/hover" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 165.0
margin_bottom = 51.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = ExtResource( 5 )

[node name="Label" type="Label" parent="TITLE/hover/play_but" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 8.0
margin_right = 618.0
margin_bottom = 164.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "BEGIN"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CollisionShape2D" type="CollisionShape2D" parent="TITLE/hover" index="1"]

position = Vector2( 327.725, 101.334 )
shape = SubResource( 4 )

[node name="hover2" type="Area2D" parent="TITLE" index="1"]

editor/display_folded = true
position = Vector2( 16.9582, 1982.71 )
scale = Vector2( 2.625, 2.625 )
input_pickable = true
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
priority = 30.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="exit_but" type="Panel" parent="TITLE/hover2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 165.0
margin_bottom = 51.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = ExtResource( 5 )

[node name="Label" type="Label" parent="TITLE/hover2/exit_but" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 8.0
margin_right = 621.0
margin_bottom = 164.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "EXIT"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CollisionShape2D" type="CollisionShape2D" parent="TITLE/hover2" index="1"]

position = Vector2( 327.725, 101.334 )
shape = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="TITLE" index="2"]

offset = Vector2( 2000, 1200 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 4, 4 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[connection signal="mouse_entered" from="TITLE/hover" to="." method="play_entered"]

[connection signal="mouse_exited" from="TITLE/hover" to="." method="play_leave"]

[connection signal="mouse_entered" from="TITLE/hover2" to="." method="exit_entered"]

[connection signal="mouse_exited" from="TITLE/hover2" to="." method="exit_leave"]


